--- a/resume.html
+++ b/resume.html
@@ -1,51 +1,70 @@
-Alice Smith
-513-555-1212
-asmith@gmail.com
-linkedin.com/alicesmith
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Resume Practice</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
 
-EDUCATION
-Miami University
-Oxford, Ohio 
-Bachelor of Arts in Communication Studies 
-GPA: 3.52
+<h1>Alice Smith</h1>
+<p class="line-space"><b>513-555-1212</b></p>
+<p class="line-space"><b>asmith@gmail.com</b></p>
+<p class="line-space"><b>linkedin.com/alicesmith</b></p>
 
-RELEVANT EXPERIENCE 
-Kroger
-Cincinnati, Ohio 
-Social Media Intern
-January 2023 to May 2023
-- Created ten unique and eye-catching Instagram posts, adhering to Kroger’s brand guidelines while appealing to viewers
-- Collaborated with a team of five other interns to develop an innovative Instagram series to be implemented in July 2020
-- Conducted research on social media best practices and analyzed Instagram metrics to increase Kroger’s following
+<h2>EDUCATION</h2>
+<h3 class="line-space">Bachelor of Arts in Communication Studies </h3>
+<p class="line-space"><i>Miami University | Oxford, Ohio </i></p>
+<p class="line-space">GPA: 3.52</p>
 
-OTHER EXPERIENCE
-Starbucks
-Hamilton, Ohio 
-Barista
-May 2018 to present
-- Guided customers through the ordering process in a friendly and helpful manner, winning a customer service award twice
-- Prepared drinks carefully and quickly to meet customers’ needs and provide a positive experience
-- Cleaned and organized the store regularly, taking the lead on both opening and closing procedures
+<h2>RELEVANT EXPERIENCE </h2>
+<h3 class="line-space">Social Media Intern</h3>
+<p class="line-space"><i>Kroger | Cincinnati, Ohio | January 2023 to May 2023 </i></p>
+<ul class="line-space">
+    <li>Created ten unique and eye-catching Instagram posts, adhering to Kroger’s brand guidelines while appealing to viewers</li>
+    <li>Collaborated with a team of five other interns to develop an innovative Instagram series to be implemented in July 2020</li>
+    <li>Conducted research on social media best practices and analyzed Instagram metrics to increase Kroger’s following</li>
 
-Hamilton Central YMCA
-Hamilton, Ohio 
-May 2017 to August 2017 
-Lifeguard
-- Provided beginner and intermediate swim lessons, educating students on proper techniques
-- Supervised the pool area and promoted the YMCA’s safety principles to keep swimmers safe
-- Worked alongside other YMCA staff members to keep facilities clean and orderly
+</ul>
+<h2>OTHER EXPERIENCE</h2>
+<h3 class="line-space">Barista</h3>
+<p class="line-space"><i>Starbucks | Hamilton, Ohio | May 2018 to present</p></i>
+<ul class="line-space-break">
+    <li>Guided customers through the ordering process in a friendly and helpful manner, winning a customer service award twice</li>
+    <li>Prepared drinks carefully and quickly to meet customers’ needs and provide a positive experience</li>
+    <li>Cleaned and organized the store regularly, taking the lead on both opening and closing procedures</li>
+</ul>
 
-SOFTWARE SKILLS
-Microsoft Office Suite (Advanced)
-Figma (Advanced)
-Adobe Creative Suite (Intermediate)
-HTML & CSS (Intermediate)
-Github (Intermediate)
+<h3 class="line-space">Lifeguard</h3>
+<p class="line-space"><i>Hamilton Central YMCA | Hamilton, Ohio | May 2017 to August 2017 </p></i>
+<ul class="line-space">
+    <li>Provided beginner and intermediate swim lessons, educating students on proper techniques</li>
+    <li>Supervised the pool area and promoted the YMCA’s safety principles to keep swimmers safe</li>
+    <li>Worked alongside other YMCA staff members to keep facilities clean and orderly</li>
+</ul>
 
-ACTIVITIES
-Secretary, Regional Student Government present
-Volunteer, Open Door Food Pantry
+<h2>SOFTWARE SKILLS</h2>
+<ul>
+    <li>Microsoft Office Suite (Advanced)</li>
+    <li>Figma (Advanced)</li>
+    <li>Adobe Creative Suite (Intermediate)</li>
+    <li>HTML & CSS (Intermediate)</li>
+    <li>Github (Intermediate)</li>
+</ul>
 
-INTERESTS
-Painting, cooking, visiting museums, bicycling
-August 2019 to December 2016 to present
+<h2>ACTIVITIES</h2>
+<ul>
+    <li>Secretary</li>
+    <li>Regional Student Government</li>
+    <li>Volunteer </li>
+    <li>Open Door Food Pantry</li>
+</ul>
+
+<h2>INTERESTS</h2>
+<ul>
+    <li>Painting</li>
+    <li>Cooking</li>
+    <li>Visiting museums</li>
+    <li>Bicycling</li>
+</ul>
+</body>
